feat: Add tooltips to activity card meta-items and update carousel button styling.

--- a/index.html
+++ b/index.html
@@ -203,16 +203,20 @@
                                                 <span class="orange material-symbols-outlined"
                                                     aria-hidden="true">timeline</span>
                                                 <span>Moderada</span>
+                                                <span class="tooltip" role="tooltip" id="tt-diff-1">Dificultad</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-time-1">
                                                 <span class="material-symbols-outlined"
                                                     aria-hidden="true">av_timer</span>
                                                 <span>3h 30m</span>
+                                                <span class="tooltip" role="tooltip" id="tt-time-1">Tiempo
+                                                    estimado</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-dist-1">
                                                 <span class="material-symbols-outlined"
                                                     aria-hidden="true">pin_drop</span>
                                                 <span>8.5 km</span>
+                                                <span class="tooltip" role="tooltip" id="tt-dist-1">Distancia</span>
                                             </button>
                                         </footer>
                                         <button class="btn btn-outline btn-card">Ver Detalle</button>
@@ -237,16 +241,20 @@
                                                 <span class="material-symbols-outlined green"
                                                     aria-hidden="true">timeline</span>
                                                 <span>Fácil</span>
+                                                <span class="tooltip" role="tooltip" id="tt-diff-2">Dificultad</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-time-2">
                                                 <span class="material-symbols-outlined"
                                                     aria-hidden="true">av_timer</span>
                                                 <span>1h 15m</span>
+                                                <span class="tooltip" role="tooltip" id="tt-time-2">Tiempo
+                                                    estimado</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-dist-2">
                                                 <span class="material-symbols-outlined"
                                                     aria-hidden="true">pin_drop</span>
                                                 <span>3.2 km</span>
+                                                <span class="tooltip" role="tooltip" id="tt-dist-2">Distancia</span>
                                             </button>
                                         </footer>
                                         <button class="btn btn-outline btn-card">Ver Detalle</button>
@@ -271,16 +279,20 @@
                                                 <span class="material-symbols-outlined red"
                                                     aria-hidden="true">timeline</span>
                                                 <span>Difícil</span>
+                                                <span class="tooltip" role="tooltip" id="tt-diff-3">Dificultad</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-time-3">
                                                 <span class="material-symbols-outlined"
                                                     aria-hidden="true">av_timer</span>
                                                 <span>5h 00m</span>
+                                                <span class="tooltip" role="tooltip" id="tt-time-3">Tiempo
+                                                    estimado</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-dist-3">
                                                 <span class="material-symbols-outlined"
                                                     aria-hidden="true">pin_drop</span>
                                                 <span>12 km</span>
+                                                <span class="tooltip" role="tooltip" id="tt-dist-3">Distancia</span>
                                             </button>
                                         </footer>
                                         <button class="btn btn-outline btn-card">Ver Detalle</button>
@@ -305,16 +317,20 @@
                                                 <span class="material-symbols-outlined orange"
                                                     aria-hidden="true">timeline</span>
                                                 <span>Moderada</span>
+                                                <span class="tooltip" role="tooltip" id="tt-diff-4">Dificultad</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-time-4">
                                                 <span class="material-symbols-outlined"
                                                     aria-hidden="true">av_timer</span>
                                                 <span>2h 45m</span>
+                                                <span class="tooltip" role="tooltip" id="tt-time-4">Tiempo
+                                                    estimado</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-dist-4">
                                                 <span class="material-symbols-outlined"
                                                     aria-hidden="true">pin_drop</span>
                                                 <span>6 km</span>
+                                                <span class="tooltip" role="tooltip" id="tt-dist-4">Distancia</span>
                                             </button>
                                         </footer>
                                         <button class="btn btn-outline btn-card">Ver Detalle</button>
