refactor: Remove redundant accessibility attributes from carousel navigation labels.
HTML5 Validado. Carousel funciona con Lector Pantalla y Tabulador

--- a/index.html
+++ b/index.html
@@ -164,22 +164,18 @@
                     <!-- Flechas PREV -->
 
                     <!-- Bucle: Estoy en 1, ir a 4 (Final) -->
-                    <label for="slide4" class="carousel-btn prev show-on-1" role="button" tabindex="0"
-                        aria-label="Ir a la última ruta">
+                    <label for="slide4" class="carousel-btn prev show-on-1">
                         <span class="material-symbols-outlined" aria-hidden="true">chevron_left</span>
                     </label>
 
                     <!-- Navegación normal -->
-                    <label for="slide1" class="carousel-btn prev show-on-2" role="button" tabindex="0"
-                        aria-label="Ver ruta anterior: Pico Tres Mares">
+                    <label for="slide1" class="carousel-btn prev show-on-2">
                         <span class="material-symbols-outlined" aria-hidden="true">chevron_left</span>
                     </label>
-                    <label for="slide2" class="carousel-btn prev show-on-3" role="button" tabindex="0"
-                        aria-label="Ver ruta anterior: Nacimiento del Ebro">
+                    <label for="slide2" class="carousel-btn prev show-on-3">
                         <span class="material-symbols-outlined" aria-hidden="true">chevron_left</span>
                     </label>
-                    <label for="slide3" class="carousel-btn prev show-on-4" role="button" tabindex="0"
-                        aria-label="Ver ruta anterior: Cueto de la Horcada">
+                    <label for="slide3" class="carousel-btn prev show-on-4">
                         <span class="material-symbols-outlined" aria-hidden="true">chevron_left</span>
                     </label>
 
@@ -344,22 +340,18 @@
                     <!-- Flechas NEXT -->
 
                     <!-- Navegación normal -->
-                    <label for="slide2" class="carousel-btn next show-on-1" role="button" tabindex="0"
-                        aria-label="Ver siguiente ruta: Nacimiento del Ebro">
+                    <label for="slide2" class="carousel-btn next show-on-1">
                         <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span>
                     </label>
-                    <label for="slide3" class="carousel-btn next show-on-2" role="button" tabindex="0"
-                        aria-label="Ver siguiente ruta: Cueto de la Horcada">
+                    <label for="slide3" class="carousel-btn next show-on-2">
                         <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span>
                     </label>
-                    <label for="slide4" class="carousel-btn next show-on-3" role="button" tabindex="0"
-                        aria-label="Ver siguiente ruta: Brañavieja Circular">
+                    <label for="slide4" class="carousel-btn next show-on-3">
                         <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span>
                     </label>
 
-                    <!-- Bucle: Estoy en 4 (Final), ir a 1 (Inicio) -->
-                    <label for="slide1" class="carousel-btn next show-on-4" role="button" tabindex="0"
-                        aria-label="Volver a la primera ruta">
+                    <!-- Bucle: Estoy en 4 (Final), ir a 1 (Inicio)-->
+                    <label for="slide1" class="carousel-btn next show-on-4">
                         <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span>
                     </label>
                 </div>
