feat: Redesign and expand activities page, update site styling, and refresh assets.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Meta Robots para Buscadores y Rastreadores de IA -->
         <meta name="robots" content="index, follow">
         <!-- Icono del Sitio Web -->
-        <link rel="shortcut icon" href="multimedia/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <!-- Autor del Sitio Web -->
         <meta name="author" content="CANTUR">
         <!-- Palabras Clave para Posicionamiento SEO -->
@@ -41,7 +41,7 @@
         <meta property="og:description"
             content="Reactivación turística de Alto Campoo durante todo el año. Senderismo, cultura y naturaleza.">
         <meta property="og:url" content="https://proyectoactea.com/">
-        <meta property="og:image" content="img/hero.jpg">
+        <meta property="og:image" content="img/isotipo.png">
     </head>
 
     <body>
@@ -70,8 +70,6 @@
 
                 <div class="header-widgets">
                     <div class="weather-widget" id="weather-widget" title="Clima en Alto Campoo">
-                        <span class="material-symbols-outlined">wb_cloudy</span>
-                        <span class="weather-temp">--°C</span>
                     </div>
 
                     <div class="lang-dropdown">
