--- a/rutas.html
+++ b/rutas.html
@@ -59,47 +59,64 @@
                     <span class="weather-temp">--°C</span>
                 </div>
 
-                <div class="lang-selector">
-                    <select id="lang-select" aria-label="Seleccionar idioma"
-                        onchange="const file = window.location.pathname.split('/').pop() || 'index.html'; window.location.href = this.value === 'en' ? `/en/${file}` : `/${file}`;">
-                        <option value="es" selected>ES</option>
-                        <option value="en">EN</option>
-                    </select>
+                <div class="lang-dropdown">
+                    <a href="#lang-menu" class="lang-trigger" aria-label="Cambiar idioma">
+                        ES <span class="material-symbols-outlined">expand_more</span>
+                    </a>
+
+                    <nav id="lang-menu" class="lang-menu-content">
+                        <ul class="lang-list">
+                            <li>
+                                <a href="rutas.html" class="lang-item active">
+                                    <span class="material-symbols-outlined check-icon">check</span>
+                                    Español
+                                </a>
+                            </li>
+                            <li>
+                                <a href="en/rutas.html" class="lang-item">
+                                    English
+                                </a>
+                            </li>
+                        </ul>
+                        <a href="#" class="lang-close-overlay">Cerrar Lista de Idiomas</a>
+                    </nav>
                 </div>
 
-                <button class="hamburger" aria-label="Abrir menú de navegación" aria-expanded="false"
-                    aria-controls="mobile-menu">
-                    <span class="material-symbols-outlined">menu</span>
-                </button>
+                <input type="checkbox" id="menu-logic-state" class="menu-logic-check"
+                    aria-label="Menú de navegación">
+
+                <label for="menu-logic-state" class="menu-toggle hamburger">
+                    <span class="icon-open material-symbols-outlined">menu</span>
+                </label>
+
+                <nav class="mobile-menu">
+                    <div class="mobile-menu-header">
+                        <a href="index.html#top" class="logo mobile-logo">
+                            <div class="logo-brand">
+                                <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150"
+                                    height="50">
+                            </div>
+                        </a>
+                        <label for="menu-logic-state" class="close-trigger">
+                            <span class="material-symbols-outlined" aria-hidden="true">close</span>
+                            <span class="visually-hidden">Cerrar menú de navegación</span>
+                        </label>
+                    </div>
+                    <nav aria-label="Navegación móvil">
+                        <ul class="mobile-nav-list">
+                            <li><a href="index.html#top">Inicio</a></li>
+                            <li><a href="rutas.html">Rutas</a></li>
+                            <li><a href="novedades.html">Novedades</a></li>
+                            <li><a href="actividades.html">Actividades</a></li>
+                            <li><a href="informacion.html">Información</a></li>
+                        </ul>
+                    </nav>
+                </nav>
+
+                <div class="mobile-menu-overlay"></div>
             </div>
         </div>
     </header>
-
-    <!-- Menú Móvil Overlay -->
-    <div class="mobile-menu-overlay"></div>
-    <div class="mobile-menu" id="mobile-menu" role="dialog" aria-modal="true" aria-label="Menú de navegación"
-        aria-hidden="true">
-        <div class="mobile-menu-header">
-            <a href="index.html#top" class="logo mobile-logo">
-                <div class="logo-brand">
-                    <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150"
-                        height="50">
-                </div>
-            </a>
-            <button class="hamburger hamburger-close" aria-label="Cerrar menú">
-                <span class="material-symbols-outlined">close</span>
-            </button>
-        </div>
-        <nav aria-label="Navegación móvil">
-            <ul class="mobile-nav-list">
-                <li><a href="index.html#top">Inicio</a></li>
-                <li><a href="rutas.html">Rutas</a></li>
-                <li><a href="novedades.html">Novedades</a></li>
-                <li><a href="actividades.html">Actividades</a></li>
-                <li><a href="informacion.html">Información</a></li>
-            </ul>
-        </nav>
-    </div>
 
     <!-- MAIN CONTENT AREA -->
     <main id="main-content">
