feat: Update main page titles and completely overhaul the information page content.

--- a/en/index.html
+++ b/en/index.html
@@ -21,7 +21,7 @@
         <!-- Palabras Clave para Posicionamiento SEO -->
         <meta name="keywords" content="ACTEA, Alto Campoo, Senderismo, Cultura, Naturaleza">
         <!-- Título del Sitio Web -->
-        <title>Proyecto ACTEA | Alto Campoo Todo El Año</title>
+        <title>ACTEA | Alto Campoo All Year Round</title>
 
         <!-- Precarga de Imágenes Críticas -->
         <link rel="preload" as="image" href="../img/hero.webp" type="image/webp" fetchpriority="high">
@@ -31,13 +31,13 @@
         <link rel="stylesheet" href="../estilo/main.css" fetchpriority="low">
 
         <!-- JavaScript en Diferido (No es Prioritaria su Carga: HTML renderiza primero) -->
-        <script defer src="js/main.js"></script>
+        <script defer src="../js/main.js"></script>
         <!-- Meta Etiquetas para Redes Sociales -->
         <meta name="twitter:card" content="summary">
         <meta name="twitter:image" content="../img/hero.jpg">
-        <meta name="DC.Title" content="Proyecto ACTEA">
+        <meta name="DC.Title" content="ACTEA | Alto Campoo All Year Round">
         <meta property="og:site_name" content="Alto Campoo All Year Round">
-        <meta property="og:title" content="Proyecto ACTEA">
+        <meta property="og:title" content="ACTEA | Alto Campoo All Year Round">
         <meta property="og:description"
             content="ACTEA: Tourism reactivation project for Alto Campoo year-round. Hiking, culture and nature.">
         <meta property="og:url" content="https://proyectoactea.com/">
