feat: Implement comprehensive HTML structure, meta tags, and content for activities and routes pages.

--- a/en/index.html
+++ b/en/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- HTML5 Dirección Texto de Izquierda a Derecha en Español de ESPAÑA-->
-<html dir="ltr" lang="em">
+<html dir="ltr" lang="en">
 
     <head>
         <!-- Codificación UTF-8 Estandarizada Unicode Completo -->
